kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: homework
  labels:
    app: busybox
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      serviceAccountName: monitoring
      containers:
        - name: web
          image: busybox:1.37
          command:
            - sh
            - -c
            - |
              httpd -f -p 8000 -h /homework
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: homework-volume
              mountPath: /homework

          livenessProbe:
            httpGet:
              path: /index.html
              port: 8000
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3

          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm -f /homework/index.html

      volumes:
        - name: homework-volume
          emptyDir: {}
