kubernetes-networks/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox
spec:
  type: ClusterIP
  selector:
    app: busybox
    tier: back-end
  ports:
    - port: 8000          # Порт сервиса внутри кластера
      targetPort: 8000    # Порт контейнера в поде
