kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox
spec:
  type: ClusterIP
  selector:
    app: busybox
    tier: back-end
  ports:
    - port: 8000
      targetPort: 8000
